Dragging a link to tabbar will not open the link, but rather the associated image.
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect)
Tracking
()
People
(Reporter: alice0775, Assigned: evilpies)
References
(Blocks 1 open bug)
Details
(Keywords: nightly-community, parity-chrome)
Attachments
(1 file)
Chrome94 works as expected, but Firefox94b2,95.0a1 does not.
Steps to reproduce:
- Open https://jp.mercari.com/
- Drag a product image to tabbar
Actual Results:
The associated image will open.
Expected Results:
The link href (detailed page) should open.
Assignee | ||
Comment 1•4 years ago
|
||
Looks like the image is inside a shadow-root, but the link is outside. We probably don't cross shadow DOM boundaries when considering if some image is a link.
![]() |
Reporter | |
Comment 2•4 years ago
|
||
For your reference.
In Firefox 93, right-clicking on a product image will only bring up the context menu for image.
In Firefox 94, the context menu has been fixed by Bug 1730625 and pops up including the context menu for links as expected.
However, for the D&D, it is still broken not only in Firefox93, but also in 94 and 95.0a1.
Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 5•4 years ago
|
||
bugherder |
Comment 6•4 years ago
|
||
The patch landed in nightly and beta is affected.
:evilpie, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 7•4 years ago
|
||
This is a longstanding issue, we don't need to uplift.
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Reproduced with Fx 95.0a1 (2021-10-05) on Windows 10.
Verified fixed with Fx 96.0a1 (2021-11-02) and Fx 95.0b1 on Windows 10, macOS 11 and Ubuntu 18.04.
Description
•