Bug 1734870 - Look for draggable links across shadow roots. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D128012